--- a/views/booking_categories_management.erb
+++ b/views/booking_categories_management.erb
@@ -74,7 +74,9 @@
 <script type="text/tmpl" id="elements_list_template">
     <tr class="table-row" id="element_row_<%%=index%>" <%%if (!entity.active){%>style="color:#BBB"<%%}%>>
       <td class="table-cell element-navigation-detail" rel="<%%= index %>" style="margin-right: 20px">
-         <img src="<%%= entity.photo_url_medium %>" class="element-row-selector" style="display:block; margin: 0 auto" rel="<%%= index %>"/>
+         <%% if (entity.photo_url_medium) { %>
+         <img src="<%%= entity.photo_url_medium %>" class="element-row-selector" style="display:block; margin: 0 auto; max-height: 80px" rel="<%%= index %>"/>
+         <%% } %>
       </td>
       <td class="table-cell element-navigation-detail" rel="<%%= index %>" style="vertical-align: middle">
          <strong><%%= entity.code %></strong>
@@ -227,6 +229,7 @@
                          <textarea rows="5" cols="50" id="description" name="description" class="form-control texteditor"><%% if (entity) {%><%%=entity.description %><%% } %></textarea>
                          </div>
                       </div>
+                      <%% if (entity.type == 'resource') { %>
                       <div class="form-group">
                             <label class="col-md-3 control-label"><%= t.booking_category_management.form.alias.label%></label>
                             <div class="col-md-9">
@@ -234,6 +237,7 @@
                             <p class="smaller_text less_contrast_text">Esta opción permite establecer una url alternativa para visualizar el producto en el navegador</p>
                             </div>
                       </div>
+                      <%% } %>
                       <div class="form-group">
                             <label class="col-md-3 control-label"><%= t.booking_category_management.form.from_price.label%></label>
                             <div class="col-md-9">
